--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Oguike Paschal</h1>
-            <p class="section__text__p2">Backend Developer</p>
+            <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
                 Download CV</button>
@@ -75,7 +75,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>1+ year <br>Backend Developer</p>
+                        <p>1+ year <br>Frontend Developer</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon">
